  - Switched commit behavior from commit->execute->begin 
		to begin->execute->commit
		[xelah-junk@xelah.com]
	- Made the _pg_use_catalog subroutine use {private_dbgpg}.
		(CPAN bug #4841) [Greg Sabino Mullane]
	- Changed strdup to safemalloc/strcpy in dbdimp.c
		(CPAN bug #4578) [anonymous CPAN user]
	- Made the data_sources method escape the database names as needed.
		Added support for databases with spaces in their names.
		[Greg Sabino Mullane]
	- Added the "noprefix" attribute to prevent the tables() method 
		from prepending the schema name. [Greg Sabino Mullane]
	- Rewrote the testing suite. Many more tests are performed.
		Servers with a low client_min_messages are handled correctly.
		[Greg Sabino Mullane]
	- Fixed bug causing '$\d' to be picked up as a placeholder. 
		(CPAN bug #4799) [Greg Sabino Mullane]
	- pg_notifies now catches and reports when PQconsumeInput fails.
		(CPAN bug #4027) [nmueller@cs.wisc.edu]
	- Enabled the "pg_bool_tf" database handle [Greg Sabino Mullane]
	- Added required fields to the type_info() method:
		SQL_DATA_TYPE, SQL_DATETIME_SUB, and INTERVAL PRECISION
		[Greg Sabino Mullane]
	- Fixed bug where the table_attributes() method was incorrectly 
		removing the NULLABLE column. [Greg Sabino Mullane]
	- Fixed bug where case was not being preserved by the 
		foreign_key_info() method [Greg Sabino Mullane]
	- a fetch on any column that had a type that did not have an entry
		in the type_info array would segfault DBD::Pg. 
		(CPAN bugs #4818,4432) [Rudy Lippan]
	- Duplicate rows bug with column_info() REMARKS has been fixed. However,
		support for Postgres 7.1.x which worked briefly for 1.31 has now been
		dropped for this feature. (Mark Stosberg)
	- Bumped required Perl version to 5.6.1 in Makefile.PL. We were already
		already requiring 5.6.1 for Pg.pm since 1.31.
	- Removed extra "return" statement in quote.c to make Solaris happy
		(CPAN bug #4419) [Rudy Lippan]
	- Changed get_info(29) to return (") instead of (\")